src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ASD</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Cotización</fullName>
        </values>
        <values>
            <fullName>Objeciones</fullName>
        </values>
        <values>
            <fullName>Objeciones Reales</fullName>
        </values>
        <values>
            <fullName>Políticas</fullName>
        </values>
        <values>
            <fullName>Venta Autorizada</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BPyP</fullName>
        <description>Proceso de oportunidad para BPyP</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abierta</fullName>
        </values>
        <values>
            <fullName>Cerrada ganada</fullName>
        </values>
        <values>
            <fullName>Descartada %2F Rechazada</fullName>
        </values>
        <values>
            <fullName>En Gestión</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CIE - DEM - DOMI</fullName>
        <description>Proceso de ventas para los productos de CIE, DEM y Domiciliación CashManagement</description>
        <isActive>true</isActive>
        <values>
            <fullName>Autorización de Tarifas</fullName>
        </values>
        <values>
            <fullName>Contratación</fullName>
        </values>
        <values>
            <fullName>Descartada %2F Rechazada</fullName>
        </values>
        <values>
            <fullName>Negociación</fullName>
        </values>
        <values>
            <fullName>Producto activado</fullName>
        </values>
        <values>
            <fullName>Producto en uso</fullName>
        </values>
        <values>
            <fullName>Promoción</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cobranza</fullName>
        <description>Proceso de ventas para los productos de Cobranza</description>
        <isActive>true</isActive>
        <values>
            <fullName>Autorización de Tarifas</fullName>
        </values>
        <values>
            <fullName>Contratación</fullName>
        </values>
        <values>
            <fullName>Descartada %2F Rechazada</fullName>
        </values>
        <values>
            <fullName>Instalación</fullName>
        </values>
        <values>
            <fullName>Negociación</fullName>
        </values>
        <values>
            <fullName>Producto activado</fullName>
        </values>
        <values>
            <fullName>Producto en uso</fullName>
        </values>
        <values>
            <fullName>Promoción</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Financiamiento PyME</fullName>
        <description>Productos de financiamiento PyME</description>
        <isActive>true</isActive>
        <values>
            <fullName>Admisión</fullName>
        </values>
        <values>
            <fullName>Análisis</fullName>
        </values>
        <values>
            <fullName>Descartada %2F Rechazada</fullName>
        </values>
        <values>
            <fullName>Desembolso PyME</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General PyME</fullName>
        <description>Basado en el  Proceso BEyG para PyME</description>
        <isActive>true</isActive>
        <values>
            <fullName>Descartada %2F Rechazada</fullName>
        </values>
        <values>
            <fullName>Diagnóstico de necesidades</fullName>
        </values>
        <values>
            <fullName>Integración de información</fullName>
        </values>
        <values>
            <fullName>Producto en uso</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General</fullName>
        <description>Proceso para oportunidades diferentes de crédito</description>
        <isActive>true</isActive>
        <values>
            <fullName>Autorización de Tarifas</fullName>
        </values>
        <values>
            <fullName>Descartada %2F Rechazada</fullName>
        </values>
        <values>
            <fullName>Diagnóstico de necesidades</fullName>
        </values>
        <values>
            <fullName>Firmas</fullName>
        </values>
        <values>
            <fullName>Formalización</fullName>
        </values>
        <values>
            <fullName>Integración de información</fullName>
        </values>
        <values>
            <fullName>Manejo de objeciones</fullName>
        </values>
        <values>
            <fullName>Producto activado</fullName>
        </values>
        <values>
            <fullName>Producto en uso</fullName>
        </values>
        <values>
            <fullName>Propuesta</fullName>
        </values>
        <values>
            <fullName>Áreas centrales</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Telemarketing</fullName>
        <description>Proceso de ventas para la implementación de telemarketing</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contacto Efectivo</fullName>
        </values>
        <values>
            <fullName>Cotización</fullName>
        </values>
        <values>
            <fullName>Objeciones</fullName>
        </values>
        <values>
            <fullName>Objeciones Reales</fullName>
        </values>
        <values>
            <fullName>Políticas</fullName>
        </values>
        <values>
            <fullName>Venta Autorizada</fullName>
        </values>
    </businessProcesses>
	<businessProcesses>
        <fullName>MX_SB_BCT_Banquero_ProcesoVenta</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Cotización</fullName>
        </values>
        <values>
            <fullName>Objeciones</fullName>
        </values>
        <values>
            <fullName>Políticas</fullName>
        </values>
        <values>
            <fullName>Venta Autorizada</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MX_SB_VTS_Telemarketing</fullName>
        <description>Nuevo proceso de ventas para recordtype MX_SB_VTS_Telemarketing</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contacto</fullName>
        </values>
        <values>
            <fullName>Cotización</fullName>
        </values>
        <values>
            <fullName>Venta Autorizada</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AbrioCorreo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>¿Abrió Correo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AceptaNuevasCoberturas__c</fullName>
        <description>Información de la cotización.</description>
        <label>¿Acepta nuevas coberturas?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualizaClipert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite actualización de la póliza.</description>
        <label>Actualiza Clipert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agencia__c</fullName>
        <description>Campo utilizado para cotización.</description>
        <label>Agencia</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alguien_mas_conduce__c</fullName>
        <description>Evaluación del cliente.</description>
        <label>Alguien mas conduce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Anio__c</fullName>
        <description>Año del vehículo.</description>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anio1__c</fullName>
        <formula>Anio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApellidoMaternoCliente__c</fullName>
        <description>Apellido materno del cliente.</description>
        <label>Apellido Materno Cliente</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApellidoMaternoConductorAsignado__c</fullName>
        <label>Apellido Materno Conductor Asignado</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apellidoMaternoContratante__c</fullName>
        <description>Apellido materno del asegurado.</description>
        <label>Apellido Materno Asegurado</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApellidoPaternoCliente__c</fullName>
        <description>Apellido paterno del cliente.</description>
        <label>Apellido Paterno Cliente</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApellidoPaternoConductorAsignado__c</fullName>
        <label>Apellido Paterno Conductor Asignado</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>apellidoPaternoContratante__c</fullName>
        <description>Apellido paterno del asegurado.</description>
        <label>Apellido Paterno Asegurado</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApellidosCliente__c</fullName>
        <description>Actualización de póliza, concatenación de ambos apellidos.</description>
        <label>Apellidos Cliente</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AplicaParaBienvenida__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aplica Para Bienvenida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aplicaverificaciondigital__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dispara el flujo para crear  caso de atención a clientes y al usuario se le envía un correo con instrucciones.</description>
        <label>Aplica verificación digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aviso__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo aviso para envío de notificaciones de verificación digital</description>
        <label>aviso</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVX_CampanaOrigen__c</fullName>
        <description>Define e identifica la campaña donde se originó la oportunidad comercial.</description>
        <label>Campaña de origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base Cancelaciones - 3013</fullName>
                </value>
                <value>
                    <fullName>Base Clientes BBVA - 40103</fullName>
                </value>
                <value>
                    <fullName>Base IN Útiles - 8013</fullName>
                </value>
                <value>
                    <fullName>Base No Contacto - 5013</fullName>
                </value>
                <value>
                    <fullName>Base Sin forma de pago - 5033</fullName>
                </value>
                <value>
                    <fullName>Base Uber - 4013</fullName>
                </value>
                <value>
                    <fullName>Call Me Back - 9013</fullName>
                </value>
                <value>
                    <fullName>Inbound - 1014</fullName>
                </value>
                <value>
                    <fullName>TP Chofer Privado - 2033</fullName>
                    <label>TP Chófer Privado - 2033</label>
                </value>
                <value>
                    <fullName>TP Motos - 7023</fullName>
                </value>
                <value>
                    <fullName>TP Particular - 2023</fullName>
                </value>
                <value>
                    <fullName>Tracking web Auto - 2013</fullName>
                </value>
                <value>
                    <fullName>Tracking web Motos - 40102</fullName>
                </value>
                <value>
                    <fullName>Legalizados 7050</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Banco__c</fullName>
        <description>Información de cuenta bancaria.</description>
        <label>Banco</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afirme</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Banamex</fullName>
                </value>
                <value>
                    <fullName>Banbajio</fullName>
                </value>
                <value>
                    <fullName>Banca Mifel</fullName>
                </value>
                <value>
                    <fullName>Banco Azteca</fullName>
                </value>
                <value>
                    <fullName>Banco Famsa</fullName>
                </value>
                <value>
                    <fullName>Bancomext</fullName>
                </value>
                <value>
                    <fullName>Bancoopel</fullName>
                </value>
                <value>
                    <fullName>Banjercito</fullName>
                </value>
                <value>
                    <fullName>Banorte</fullName>
                </value>
                <value>
                    <fullName>Banregio</fullName>
                </value>
                <value>
                    <fullName>Banrejio</fullName>
                </value>
                <value>
                    <fullName>BBVA Bancomer</fullName>
                </value>
                <value>
                    <fullName>Extranjero</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>Inbursa</fullName>
                </value>
                <value>
                    <fullName>Interbanco</fullName>
                </value>
                <value>
                    <fullName>Invex Banco</fullName>
                </value>
                <value>
                    <fullName>IXE</fullName>
                </value>
                <value>
                    <fullName>Mifel</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Scotiabank</fullName>
                </value>
                <value>
                    <fullName>CREDOMATIC</fullName>
                </value>
                <value>
                    <fullName>Sin asignar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDEO__c</fullName>
        <description>Datos del vehículo.</description>
        <label>BDEO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ahora</fullName>
                </value>
                <value>
                    <fullName>Agenda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BeneficiarioPreferente__c</fullName>
        <description>Campo para obtener datos del vehículo.</description>
        <label>Beneficiario Preferente</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficio_econ_mico_esperado__c</fullName>
        <label>Beneficio económico esperado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BPyP_ls_DetalleSubProducto__c</fullName>
        <description>Campo creado para el Producto 21 de la Banca Patrimonial y Privada y dependiente del campo Subproducto.</description>
        <label>Detalle de Subproducto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_BPP_Subproducto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Efectivo</fullName>
                </value>
                <value>
                    <fullName>Reportos</fullName>
                </value>
                <value>
                    <fullName>Pagare</fullName>
                </value>
                <value>
                    <fullName>Fondos</fullName>
                </value>
                <value>
                    <fullName>ETFs</fullName>
                </value>
                <value>
                    <fullName>Estructurados</fullName>
                </value>
                <value>
                    <fullName>Bonos Gubernamentales</fullName>
                </value>
                <value>
                    <fullName>CEDES</fullName>
                </value>
                <value>
                    <fullName>Bonos Privados</fullName>
                </value>
                <value>
                    <fullName>Acciones</fullName>
                </value>
                <value>
                    <fullName>CKDs</fullName>
                </value>
                <value>
                    <fullName>Fibras</fullName>
                </value>
                <value>
                    <fullName>Captación</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Colocación</fullName>
                </value>
                <value>
                    <fullName>Colocación Primaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalleAvenida__c</fullName>
        <label>calle o avenida</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cambiocoberturas__c</fullName>
        <label>Cambio en coberturas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cambiosformaspago__c</fullName>
        <label>Cambios en formas de pago</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campanya__c</fullName>
        <label>Campaña</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <description>Campo para hacer una cotización.</description>
        <formula>IF( ISBLANK(Account.Canal__c), TEXT(LeadSource), Account.Canal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanalClipert__c</fullName>
        <description>Campo utilizado para cotización.</description>
        <label>Canal Clipert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INTERNET</fullName>
                </value>
                <value>
                    <fullName>TELEMARKETING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelada_antes_de_48_hrs__c</fullName>
        <formula>IF(AND ( Solicitud_Cancelacion__c =TRUE,  Solicitud_Cancelacion_fecha__c &lt;= (FechaEmision__c +2)   ), true, false)</formula>
        <label>Cancelada antes de 48 hrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacidad__c</fullName>
        <description>Datos del vehículo.</description>
        <label>Capacidad</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CargaInicial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sincronización con clipert</description>
        <label>Carga Inicial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CargaNueva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carga Nueva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caso_Relacionado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso Relacionado</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CiudadBenef__c</fullName>
        <label>ciudad</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaveSb__c</fullName>
        <description>Datos del vehículo.</description>
        <label>ClaveSb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM001_nu_costoGarantiaNAFIN__c</fullName>
        <label>Costo de garantía NAFIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM001_nu_premioCliente__c</fullName>
        <label>Premio Cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM001_num_Costo_de_garant_Gobierno__c</fullName>
        <description>Se obtiene el cálculo de costo de garantía de gobierno por la calculadora marge.</description>
        <label>Costo de garantía de Gobierno</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cobro_anual__c</fullName>
        <label>Cobro anual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comentarios_USAC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Observaciones del responsable que deberás atender.</inlineHelpText>
        <label>Observaciones del responsable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>codigoIntermediario__c</fullName>
        <label>Código Intermediario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostal__c</fullName>
        <formula>if(LEN(Account.BillingPostalCode)&gt;0, Account.BillingPostalCode,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Postal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostalBenef__c</fullName>
        <label>Codigo Postal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoPostalCliente__c</fullName>
        <description>Código postal del Asegurado.</description>
        <label>Código Postal Asegurado</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigoverificadorcompra__c</fullName>
        <label>Código verificador de compra</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColoniaBenef__c</fullName>
        <label>Colonia</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColoniaCliente__c</fullName>
        <description>Colonia del asegurado.</description>
        <label>Colonia Asegurado</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <description>Información de wibe, de dónde lo envían.</description>
        <label>Comentarios</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comentarios_de_Personalizaci_n__c</fullName>
        <description>Información para cotización.</description>
        <label>Comentarios de Personalización</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comision_por_operacion__c</fullName>
        <label>Comisión por operación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CompaniaSeguros__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para la evaluación de cliente.</description>
        <label>Compañia de Seguros</label>
        <referenceTo>Compania_Seguros__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cond__participant_campaign_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Campaign</label>
        <referenceTo>cond__Account_Campaign__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correo_cool_drive__c</fullName>
        <description>Permite conocer el estado de envío del correo de cool drive</description>
        <label>Correo cool drive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No enviado</fullName>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>No abierto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correo_Renovacion_Pendiente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo con información para el sistema.</description>
        <label>Envío de correo Renovación Pendiente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorreoCliente__c</fullName>
        <description>Correo del asegurado.</description>
        <label>Correo del Asegurado</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CorreoClienteMkt__c</fullName>
        <formula>Account.Correo_Electronico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CorreoClienteMkt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorreodelCliente__c</fullName>
        <description>Correo del Contratante.</description>
        <formula>Account.Correo_Electronico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correo del Contratante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>correoElectronicoContratante__c</fullName>
        <label>Correo Electronico Contratante</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CorreoVerificacionEnviado__c</fullName>
        <description>Identifica el estado del e-mail de verificación</description>
        <label>Correo verificación enviado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No enviado</fullName>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>No abierto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CotizacionID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cotización ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CotizacionRespaldada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cotización Respaldada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_FOR_MargenCobrado__c</fullName>
        <description>Si Tasa Fija:((Tasa Cobrada - Costo Fondeo)*10000) - Prima Derivado - Franquicia Derivado - Costo de Garantía de Gobierno - Premió al Cliente - Costo de Garantía NAFIN,Si Tasa Variable:Tasa Cobrada - Costo Fondeo - Prima Derivado - Franquicia Derivado - Costo de Garantía de Gobierno - Premió al Cliente - Costo de Garantía NAFIN</description>
        <formula>IF( TEXT(CR_SEL_TipoTasa__c) = &apos;Fija&apos; , (((CR_NU_TasaCobrada1__c - CR_NU_CostoFondeo__c)*10000) - CR_NU_PrimaDerivado__c - CR_NU_FranquiciaDerivado__c  - CM001_nu_premioCliente__c - CM001_nu_costoGarantiaNAFIN__c -  CM001_num_Costo_de_garant_Gobierno__c), IF(TEXT(CR_SEL_TipoTasa__c) = &apos;Variable&apos;, (Spread_Cliente__c -  Spread_Fondeo__c - CR_NU_PrimaDerivado__c - CR_NU_FranquiciaDerivado__c  - CM001_nu_premioCliente__c - CM001_nu_costoGarantiaNAFIN__c -  CM001_num_Costo_de_garant_Gobierno__c  ), 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Si Tasa Fija:Tasa Cobrada - Costo FondeoSi Tasa Variable:Spread Cliente - Spread Fondeo - Prima derivado - Franquicia derivado</inlineHelpText>
        <label>Margen Cobrado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_NU_CostoFondeo__c</fullName>
        <inlineHelpText>Costo de Fondeo  en Porcentaje</inlineHelpText>
        <label>(Fija) Costo de Fondeo (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CR_NU_FranquiciaDerivado__c</fullName>
        <inlineHelpText>Costo de la Franquicia en Puntos Básicos</inlineHelpText>
        <label>(Variable) Franquicia del Derivado (Pbs)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_NU_PrimaDerivado__c</fullName>
        <inlineHelpText>Costo del derivado sin franquicia</inlineHelpText>
        <label>(Variable) Costo del Derivado (Pbs)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CR_NU_TasaCobrada1__c</fullName>
        <inlineHelpText>Sólo se puede rellenar si el Tipo de Tasa es Fija</inlineHelpText>
        <label>(Fija) Tasa Cobrada (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CR_SEL_Plazo__c</fullName>
        <label>Plazo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 a 1 año</fullName>
                </value>
                <value>
                    <fullName>1 a 3 años</fullName>
                </value>
                <value>
                    <fullName>3 a 5 años</fullName>
                </value>
                <value>
                    <fullName>5 a 7 años</fullName>
                </value>
                <value>
                    <fullName>7 a 10 años</fullName>
                </value>
                <value>
                    <fullName>Más de 10 años</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR_SEL_Moneda__c</fullName>
        <description>Lista de selección que indica si la moneda de la oportunidad es en pesos o en dólares.</description>
        <label>Moneda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dólares</fullName>
                </value>
                <value>
                    <fullName>Pesos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR_SEL_TipoTasa__c</fullName>
        <description>Lista de selección que indica si la tasa de la oportunidad es fija o variable.</description>
        <label>Tipo de Tasa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fija</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR1__c</fullName>
        <formula>Owner.CR__c</formula>
        <label>CR Usuario</label>
        <type>Text</type>
    </fields>
</CustomObject>